# yolov5-openvino-cpp-python

./: README.md
cpp/: CMakeLists.txt  Dockerfile  README.md  main.cpp
model/: yolov5n.mapping  yolov5n.xml  yolov5n.yaml
python/: README.md  main.py  requirments.txt
